# bps-nav

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  eval_depth.sh  eval_rgb.sh  fastrollout.cpp  pytorch.cpp  setup.py  stokes_views  test.py  train_depth.sh  train_rgb.sh  v4r_example.cpp
bps_nav/: README.md  __init__.py  evaluator.py  run.py
bps_nav/agents/: ppo_agents.py  simple_agents.py  slam_agents.py
bps_nav/common/: __init__.py  base_trainer.py  baseline_registry.py  env_utils.py  environments.py  logger.py  rollout_storage.py  running_mean_and_var.py  tree_utils.py  utils.py
bps_nav/config/: __init__.py  default.py
bps_nav/config/pointnav/: ddppo_pointnav.yaml
bps_nav/configs/tasks/: objectnav_mp3d.yaml  pointnav.yaml  pointnav_gibson.yaml  pointnav_mp3d.yaml  pointnav_rgbd.yaml
bps_nav/configs/test/: habitat_all_sensors_test.yaml  habitat_mp3d_object_nav_test.yaml  habitat_r2r_vln_test.yaml
bps_nav/rl/ddppo/: __init__.py  multi_node_slurm.sh  single_node.sh
bps_nav/rl/ddppo/algo/: __init__.py  addppo_trainer.py  ddp_utils.py  ddppo.py  ddppo_trainer.py
bps_nav/rl/models/: rnn_state_encoder.py  simple_cnn.py
bps_nav/rl/ppo/: __init__.py  fp16_adascale.py  lamb.py  lans.py  policy.py  ppo.py  ppo_trainer.py
python/ddppo_fastrollout/: setup.py
simulator/: CMakeLists.txt  pytorch.cpp  simulator.cpp
simulator/python/bps_nav/: setup.py
simulator/python/bps_pytorch/: setup.py
simulator/python/bps_sim/: setup.py
simulator/python/pytorch/: setup.py
tools/: preprocess_datasets.sh
(+4 files in other folders)
